# StellArts

./: .coverage  README.md  coverage.xml  fix_ruff_errors.py
.github/workflows/: ci.yml  contracts.yml  frontend-check.yml
backend/: .env.example  quick_role_test.py  requirements.txt  test_geolocation_standalone.py  test_roles.py
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: create_test_artisans.py  seed_db.py
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  storage_types.rs  test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
contracts/reputation/test_snapshots/test/: test_reputation_isolation_between_artisans.1.json  test_reputation_robustness_multiple_reviews.1.json
contracts/reputation/test_snapshots/tests/: test_contract_get_reputation_no_data.1.json  test_contract_set_and_get_reputation.1.json  test_get_stats.1.json  test_multiple_users_independent_reputation.1.json  test_rate_artisan_not_in_range.1.json  test_rate_artisan_prevents_double_rating.1.json  test_rate_artisan_rejects_duplicate_caller_artisan_pair.1.json  test_rate_artisan_rejects_random_user.1.json  test_rate_artisan_rejects_self_rating.1.json  test_rate_artisan_rejects_unfinished_engagement.1.json  test_rate_artisan_requires_auth.1.json  test_rate_artisan_with_verified_completed_engagement.1.json  test_set_reputation_requires_admin_auth.1.json  test_update_existing_reputation.1.json
frontend/: .gitignore  .npmrc  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.setup.ts
src/: main.py
(+84 files in other folders)
