[package]
name = "reputation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow = { path = "../escrow" }

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]
